--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://Ashu-Codez.github.io/NikeBrandPage",
   "name": "brandpage",
   "private": true,
   "version": "0.0.0",
@@ -8,9 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
-     "predeploy": "vite build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview",
+   
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -25,7 +23,6 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   }
